// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handleAdvertisingStart error 1`] = `
Object {
  "calls": Array [
    Array [
      "advertisingStart: Error: mock-error",
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should handleAdvertisingStart error 2`] = `
Object {
  "calls": Array [],
  "instances": Array [],
}
`;

exports[`should handleAdvertisingStart error 3`] = `
Object {
  "calls": Array [],
  "instances": Array [],
}
`;

exports[`should handleAdvertisingStart error 4`] = `
Object {
  "calls": Array [
    Array [
      "advertisingStart: Error: mock-error",
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should handleAdvertisingStart error 5`] = `
Object {
  "calls": Array [],
  "instances": Array [],
}
`;

exports[`should handleAdvertisingStart success 1`] = `
Object {
  "calls": Array [
    Array [
      [Function],
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should handleAdvertisingStart success 2`] = `
Object {
  "calls": Array [
    Array [
      undefined,
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should handleAdvertisingStart success 3`] = `
Object {
  "calls": Array [
    Array [
      "advertisingStart: success",
    ],
  ],
  "instances": Array [
    undefined,
  ],
}
`;

exports[`should handleAdvertisingStart success 4`] = `
Object {
  "calls": Array [
    Array [
      Array [
        undefined,
      ],
    ],
  ],
  "instances": Array [
    [Function],
  ],
}
`;
